--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URL =mongodb://localhost/sneakerhub;
+MONGODB_URL =mongodb+srv://ajay:ajay@cluster0.eqtaj.mongodb.net/mydb?retryWrites=true&w=majority;
 JWT_TOKEN =somethingsecret;
 PORT = 5000;
