--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "escart",
   "proxy": "http://localhost:5000/",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@tippyjs/react": "^4.1.0",
     "axios": "^0.20.0",
+    "concurrently": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
@@ -26,10 +28,13 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HOST=ec2-65-0-98-57.ap-south-1.compute.amazonaws.com react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "depInstall": "npm install && cd ./backend/ && npm install",
+    "start-backend": "nodemon backend/backend.js",
+    "dev": "concurrently -n 'server,client' -c 'red,green'  \"npm run start-backend\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": "react-app"
