--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "escart",
   "version": "0.1.0",
@@ -8,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -27,7 +27,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "client":"react-scripts start",
+    "client": "react-scripts start",
     "start": "HOST=ec2-65-0-98-57.ap-south-1.compute.amazonaws.com react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
