--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.20.0",
     "concurrently": "^5.3.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
     "react-redux": "^7.2.1",
